:bug: Ensure that collapsed package-card style wins
Package filtering is for some reason settings styles directly on the
package-card elements, instead of using classes to control visibility,
and this breaks section collapsing. The quick and dirty workaround is to
ensure the collapsed section package-card wins by virtue of !important.

Fixes #684

--- a/styles/settings-view.less
+++ b/styles/settings-view.less
@@ -321,7 +321,7 @@
       }
 
       .package-container .package-card {
-        display: none;
+        display: none !important;
       }
     }
   }
